# samconf

./: .gitlab-ci.yml  CMakeLists.txt  README.md  conf.py  index.rst  samconf_0.52.4.orig.tar.gz.delta  samconf_0.52.4.orig.tar.gz.id  samconf_0.53.4.orig.tar.xz.delta  samconf_0.53.4.orig.tar.xz.id  samconf_0.54.0.orig.tar.xz.delta  samconf_0.54.0.orig.tar.xz.id  samconf_0.56.3.orig.tar.xz.delta  samconf_0.56.3.orig.tar.xz.id  samconf_0.57.1.orig.tar.xz.delta  samconf_0.57.1.orig.tar.xz.id  samconf_0.58.3.orig.tar.xz.delta  samconf_0.58.3.orig.tar.xz.id  samconf_0.58.8.orig.tar.xz.delta  samconf_0.58.8.orig.tar.xz.id  samconf_0.59.0.orig.tar.xz.delta  samconf_0.59.0.orig.tar.xz.id  samconf_0.60.0.orig.tar.xz.delta  samconf_0.60.0.orig.tar.xz.id  samconf_0.60.1.orig.tar.xz.delta  samconf_0.60.1.orig.tar.xz.id  samconf_0.61.0.orig.tar.xz.delta  samconf_0.61.0.orig.tar.xz.id  samconf_0.61.2.orig.tar.xz.delta  samconf_0.61.2.orig.tar.xz.id  samconf_0.63.6.orig.tar.xz.delta  samconf_0.63.6.orig.tar.xz.id  samconf_0.73.1.orig.tar.xz.delta  samconf_0.73.1.orig.tar.xz.id  samconf_0.75.14.orig.tar.xz.delta  samconf_0.75.14.orig.tar.xz.id  samconf_0.75.4.orig.tar.xz.delta  samconf_0.75.4.orig.tar.xz.id
.github/workflows/: build-documentation.yml
ci/: Dockerfile  build.sh  build_doc.sh  create_debian_release.sh  docker-run.sh  ignored_sources.sh  index.rst  plot_csv_report.p  publish_kpis.sh  run_benchmark.sh  run_smoketests.sh  updateversion.sh
cmake/: project.cmake
debian/: changelog
debian.native/: README.md  control
doc/source/: index.rst
documentation/: developer.md
documentation/adr/: ADR_template.md  index.rst  source_verification.md
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  dump_config.c  dump_merged_config.c  env_example.c  index.rst  samenvprobe.c  samprobe.c
src/demo/config_gen/: config_data.py  config_gen.py  config_provider.py
src/samconf/: CMakeLists.txt  Config.cmake.in
src/samconf/interface/samconf/: samconf_types.h
src/samconf/private/: dummy_backend.c  env_backend.c  json_backend.c  path_helper.c  samconf.c  uri.c
src/samconf/public/samconf/: dummy_backend.h  env_backend.h  json_backend.h  path_helper.h  samconf.h  uri.h
test/benchmark/: bench_test.sh  bench_test_env.sh  index.rst
test/benchmark/benchmark_100_configs_to_merge/: 100_make.json  100_over.json  106_everything.json  115_green.json  119_tend.json  121_edge.json  121_lot.json  129_when.json  12_really.json  139_dream.json  13_fire.json  140_gun.json  142_join.json  143_natural.json  143_series.json  144_almost.json  148_none.json  150_one.json  153_plan.json  154_carry.json  156_bring.json  156_feeling.json  15_traditional.json  161_indeed.json  162_teach.json  163_size.json  164_structure.json  166_company.json  173_article.json  175_shake.json  177_send.json  179_remember.json  17_voice.json  180_actually.json  184_season.json  187_employee.json  191_commercial.json  191_red.json  191_television.json  194_card.json  (+60 more)
test/benchmark/benchmark_10_configs_to_merge/: 106_road.json  129_reveal.json  14_investment.json  160_soon.json  19_country.json  228_trade.json  34_eye.json  45_occur.json  81_during.json  98_least.json
test/benchmark/benchmark_3_configs_to_merge/: 108_able.json  114_just.json  213_guy.json
test/benchmark/benchmark_5_configs_to_merge/: 106_order.json  125_pattern.json  141_peace.json  210_gun.json  30_other.json
test/smoketest/: smoketest.sh  smoketest_env.sh  smoketest_interactive.sh  test_utils_example.c
test/utest/mocks/: CMakeLists.txt
test/utest/mocks/samconf/: Config.cmake.in  mock_samconf.c  mock_samconf.h
test/utest/samconf/: CMakeLists.txt
test/utest/samconf/config_backend/samconfConfigBackendDelete/: CMakeLists.txt
test/utest/samconf/config_backend/samconfConfigBackendInit/: CMakeLists.txt
test/utest/samconf/config_backend/samconfConfigBackendNew/: CMakeLists.txt
test/utest/samconf/env_backend/: CMakeLists.txt
test/utest/samconf/env_backend/samconfEnvBackendClose/: CMakeLists.txt  case_err_param.c  case_success.c  samconfEnvBackendClose_utest.c  samconfEnvBackendClose_utest.h
test/utest/samconf/env_backend/samconfEnvBackendLoad/: CMakeLists.txt  case_error.c  case_exterr_create_config.c  case_success.c  samconfEnvBackendLoad_utest.c  samconfEnvBackendLoad_utest.h
test/utest/samconf/env_backend/samconfEnvBackendSupports/: CMakeLists.txt  case_error_invalid_location.c  case_ext_err_strndup.c  case_success.c  samconfEnvBackendSupports_utest.c  samconfEnvBackendSupports_utest.h
test/utest/samconf/json_backend/samconfJsonBackendSupports/: CMakeLists.txt
test/utest/samconf/path_helper/: CMakeLists.txt
test/utest/samconf/path_helper/samconfPathGetPath/: CMakeLists.txt  case_env_success.c  case_err_param_config.c  case_err_param_path.c  case_json_success.c  samconfPathGetPath_utest.c  samconfPathGetPath_utest.h
test/utest/samconf/samconf/: CMakeLists.txt
test/utest/samconf/samconf/samconfConfigMerge/: CMakeLists.txt  case_success.c  samconfConfigMerge_utest.c  samconfConfigMerge_utest.h
test/utest/samconf/samconf/samconfConfigMergeConfig/: CMakeLists.txt  case_overwrite_success.c  case_success.c  defConfig.h  fetchapiConfig.h  samconfConfigMergeConfig_utest.c  samconfConfigMergeConfig_utest.h
test/utest/samconf/samconf/samconfConfigMergeConfigs/: CMakeLists.txt  case_signage_success.c  case_success.c  dltConfig.h  fetchapiConfig.h  jsonConfig.h  samconfConfigMergeConfigs_utest.c  samconfConfigMergeConfigs_utest.h  sqlConfig.h
test/utest/samconf/samconf/samconfConfigNext/: CMakeLists.txt  case_error.c  case_success.c  samconfConfigNext_utest.c  samconfConfigNext_utest.h
test/utest/samconf/samconf/samconfCreateBoolAt/: CMakeLists.txt  case_error_null_path.c  case_error_null_root.c  case_ext_error_config_new.c  case_success.c  samconfCreateBoolAt_utest.c  samconfCreateBoolAt_utest.h
test/utest/samconf/samconf/samconfInsertAt/: CMakeLists.txt  case_success.c  samconfInsertAt_utest.c  samconfInsertAt_utest.h
test/utest/samconf/uri/: CMakeLists.txt
test/utest/utils/: CMakeLists.txt  Config.cmake.in
(+114 files in other folders)
